--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,3 @@
-<p>
-  about works!
-</p>
+<h1 class="animated fadeIn fast">Sobre BarrioSeguro App</h1>
+<hr>
+<p class="animated fadeIn"> Bienvenidos BS </p>
