--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,3 +1,36 @@
-<p>
-  heroes works!
-</p>
+<h1>Heroes <small>marvel y dc</small></h1>
+  <hr>
+
+  <div class="card-colums" style="width: 20rem;">
+
+      <div class="card" style="width: 20rem;">
+          <img class="card-img-top img fluid" src="/assets/img/aquaman.png" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+            <button type="button" class="btn btn-outline-primary btn-block" >
+              Ver más...
+            </button>
+
+          </div>
+        </div>
+  </div>
+
+  <div class="card-colums">
+      
+            <div class="card">
+                <img class="card-img-top img fluid" src="/assets/img/aquaman.png" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      
+                  <button type="button" class="btn btn-outline-primary btn-block" >
+                    Ver más...
+                  </button>
+      
+                </div>
+              </div>
+        </div>
