--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,35 +2,21 @@
   <hr>
 
   <div class="card-colums" style="width: 20rem;">
-
-      <div class="card" style="width: 20rem;">
-          <img class="card-img-top img fluid" src="/assets/img/aquaman.png" alt="Card image cap">
+      <!-- FOR DE LA LISTA DE GET -->
+      <div class="card" *ngFor="let heroe of heroes; let i = index" style="width: 20rem;">
+        <!-- arreglo de imagenes heroe -->
+          <img class="card-img-top img fluid" [src]="heroe.img" [alt]="heroe.nombre">
           <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h4 class="card-title"> {{ heroe.nombre }} </h4>
+            <p class="card-text"> {{heroe.bio }} .</p>
+            <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
 
-            <button type="button" class="btn btn-outline-primary btn-block" >
+            <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block" >
               Ver más...
-            </button>
-
+            </button> 
+            <!-- Enrutamiento y carga del arreglo i de los heroes cargados en let = index  y indico
+            que heroe y que id tiene-->
+           <!--  <a [routerLink]="['/heroe',i]" class="btn btn-outline-primary">ver mas link </a> -->
           </div>
         </div>
   </div>
-
-  <div class="card-colums">
-      
-            <div class="card">
-                <img class="card-img-top img fluid" src="/assets/img/aquaman.png" alt="Card image cap">
-                <div class="card-block">
-                  <h4 class="card-title">Card title</h4>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      
-                  <button type="button" class="btn btn-outline-primary btn-block" >
-                    Ver más...
-                  </button>
-      
-                </div>
-              </div>
-        </div>
