--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,3 +1,31 @@
-<p>
-  heroe works!
-</p>
+
+<h1> {{ heroe.nombre | uppercase }} <small> {{ heroe.aparicion | date:'y' }}</small> </h1>
+<hr>
+
+<div class="row animated fadeIn fast">
+
+  <div class="col-md-4">
+
+
+      <img [src]="heroe.img" class="img fluid" [alt]="heroe.nombre">
+      <br><br>
+      <a [routerLink]=" ['/heroes'] " class="btn btn-outline-danger brn-block"> Regresar</a>
+
+  </div>
+
+  <div class="col-md-8">
+      <h3 > {{ heroe.nombre }}</h3>
+      <hr>
+      <p>
+        {{heroe.bio}}
+      </p>
+      <div>
+            <img *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel.jpg">
+            <img *ngIf="heroe.casa == 'DC'" class="img-logo" src="assets/img/DC.jpg">
+      </div>
+
+
+    </div>
+
+        
+</div>
