--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,5 @@
-<h1 class="animated fadeIn fast">Sobre BarrioSeguro App</h1>
+<h1 class="animated fadeIn fast">Creadores:</h1>
 <hr>
-<p class="animated fadeIn"> Bienvenidos BS </p>
+<p class="animated fadeIn"> Patricio Torres</p>
+<p class="animated fadeIn"> Roberto Lobos</p>
+<p class="animated fadeIn"> Felipe Hernández</p>
