--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,4 +1,4 @@
-<h1>Heroes <small>marvel y dc</small></h1>
+<h1>Registros <small> generales</small></h1>
   <hr>
 
   <div class="card-colums" style="width: 20rem;">
