--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid" animated fadeIn fast>
   <div class="container">
-    <h1 class="display-3">Comic App</h1>
-    <p class="lead">Aplicacion de comics.</p>
+    <h1 class="display-3">Barrio Seguro</h1>
+    <p class="lead">Es una aplicacion desarrollada para la seguridad cotidiana.</p>
   </div>
 </div>
