--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="/assets/img/A-64.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    Bootstrap
+    Barrio Seguro
   </a>
 </nav>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,10 +14,10 @@
     <ul class="navbar-nav mr-auto">
               <!-- active -->
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['home']" >Home</a>
+        <a class="nav-link" [routerLink]="['home']" >Inicio</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['heroes']">Link</a>
+        <a class="nav-link" [routerLink]="['heroes']">Registros</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">About</a>
@@ -30,6 +30,6 @@
       class="btn btn-outline-primary my-2 my-sm-0" type="button">Search</button>
     </form>
 
-    
+
   </div>
 </nav>
