--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,13 +1,15 @@
 <h1>Registros <small> Generales</small></h1>
   <hr>
 
-  <div class="card-colums" style="width: 20rem;">
+  <div class="card-colums">
       <!-- FOR DE LA LISTA DE GET -->
-      <div class="card" *ngFor="let heroe of heroes; let i = index" style="width: 20rem;">
+      <div class="card " *ngFor="let heroe of heroes; let i = index" style="width: 20rem;">
         <!-- arreglo de imagenes heroe -->
           <img class="card-img-top img fluid" [src]="heroe.img" [alt]="heroe.nombre">
           <div class="card-block">
             <h4 class="card-title"> {{ heroe.nombre }} </h4>
+            <p class="card-text"> Emergencia </p>
+            <p class="card-text"> Descripcion</p>
             <p class="card-text"> {{heroe.bio }} .</p>
             <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
 
