--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -25,9 +25,9 @@
     </ul>
 
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" (keyup.enter)="buscarHeroe(buscarTexto.value)" #buscarTexto>
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar" (keyup.enter)="onEnter(buscarHeroe(buscarTexto.value))" #buscarTexto>
       <button (click)="buscarHeroe(buscarTexto.value)"
-      class="btn btn-outline-primary my-2 my-sm-0" type="button">Search</button>
+      class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
     </form>
 
 
