--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,16 @@
+
 <div class="jumbotron jumbotron-fluid" animated fadeIn fast>
-  <div class="container">
+  <div>
     <h1 class="display-3">Barrio Seguro</h1>
     <p class="lead">Es una aplicacion desarrollada para la seguridad cotidiana.</p>
+    <agm-map [latitude]="getLati()" [longitude]="getLong()" [zoom]="16" [scrollwheel]="false" [mapDraggable]="false">
+        <agm-marker [latitude]="getLati()" [longitude]="getLong()">
+            <agm-info-window>
+                <h5>Su latitud de trabajo es {{getLati()}}</h5>
+                <p>Su Longitud de trabajo es {{getLong()}}</p>
+              </agm-info-window>
+        </agm-marker>
+      </agm-map>
   </div>
 </div>
+
