--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -20,7 +20,7 @@
         {{heroe.bio}}
       </p>
       <div>
-            <img *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel.jpg" width="50 px" height="50 px">
+            <img id='perfil' *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel.jpg">
             <img *ngIf="heroe.casa == 'DC'" class="img-logo" src="assets/img/DC.jpg">
       </div>
 
