--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -20,8 +20,8 @@
         {{heroe.bio}}
       </p>
       <div>
-            <img id='perfil' *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel.jpg">
-            <img *ngIf="heroe.casa == 'DC'" class="img-logo" src="assets/img/DC.jpg">
+            <img id='perfil' *ngIf="heroe.casa == 'Marvel'" class="img-logo">
+            <img *ngIf="heroe.casa == 'DC'" class="img-logo">
       </div>
 
 
