--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -25,7 +25,7 @@
 
 
 <div class="card-columns animated fadeIn">
-    <div class="card" *ngFor="let alarma of (alarmas | async)?.reverse(); let i = index">
+    <div class="card" *ngFor="let alarma of (prueba | async)?.reverse(); let i = index">
         <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
         <agm-map [latitude]="alarma.lat" [longitude]="alarma.lon" [zoom]="16" [scrollwheel]="false" [mapDraggable]="false">
             <agm-marker [latitude]="alarma.lat" [longitude]="alarma.lon"></agm-marker>
@@ -33,6 +33,8 @@
         <div class="card-body">
           <h4 class="card-title">{{alarma.tipo}}</h4>
           <p class="card-text">{{alarma.descripcion}}</p>
+          <p class="card-text">{{ mostrar_fecha(alarma.tiempo) }}</p>
+          <p>{{lista}}</p>
           <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block" >
               Ver más...
             </button> 
