--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -32,6 +32,16 @@
       <button (click)="buscarHeroe(buscarTexto.value)"
       class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
     </form>
+    
+      Search: <input ng-model="searchText">
+      <table id="searchTextResults">
+        <tr><th>Name</th><th>Phone</th></tr>
+       <!-- <tr ng-repeat="friend in friends | filter:searchText"> -->
+          <td>nombre</td>
+          <td>numero</td>
+      </table>
+
+
 
 
   </div>
