--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,3 +1,4 @@
+
 <h1>Registros <small> Generales</small></h1>
 <hr>
 <!--
@@ -23,6 +24,11 @@
       </div>
 </div> -->
 
+<form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="text" placeholder="Buscar"  #buscarTexto>
+    <button (click)="buscarHeroe(buscarTexto.value)"
+    class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+  </form>
 
 <div class="card-columns animated fadeIn">
     <div class="card" *ngFor="let alarma of (listado | async)?.reverse(); let i = index">
