--- a/src/app/components/buscador/buscador.component.html
+++ b/src/app/components/buscador/buscador.component.html
@@ -1,7 +1,7 @@
 <h1>Buscador: <small>{{termino}}</small></h1>
 <select> Filtros </select>
 <div class="card-columns animated fadeIn">
-    <div class="card" *ngFor="let alarma of (listado | async)?.reverse(); let i = index">
+    <div class="card" *ngFor="let alarma of (listado | async)?.reverse(); let j = index">
         <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
    <!--  <agm-map [latitude]="alarma.lat" [longitude]="alarma.lon" [zoom]="16" [scrollwheel]="false" [mapDraggable]="false">
             <agm-marker [latitude]="alarma.lat" [longitude]="alarma.lon"></agm-marker>
@@ -9,12 +9,14 @@
         <div class="card-body">
           <h4 class="card-title">{{alarma.tipo}}</h4>
           <p class="card-text">{{alarma.descripcion}}</p>
-          <p class="card-text">{{ mostrar_fecha(alarma.tiempo) }}</p>
+          <p class="card-text">{{alarma.tiempo | date }}</p>
           <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block" >
               Ver más...
             </button> 
         </div>
-      </div>
     </div>
+</div>
+    
 
-
+<tr></tr>
+<!--  -->
