--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -46,7 +46,7 @@
           <p class="card-text">{{alarma.descripcion}}</p>
           <p class="card-text">{{alarma.tiempo | date }}</p>
           <button type="button" class="btn btn-outline-primary btn-block" (click)="alarma.ver=!alarma.ver">
-              Ver más...
+              Ver ubicación.
           </button> 
         </div>
         
