--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/assets/img/A-64.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="/assets/favicon.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Barrio Seguro
   </a>
 </nav>
