--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,9 @@
 <div class="jumbotron jumbotron-fluid" animated fadeIn fast>
   <div>
     <h1 class="display-3">Barrio Seguro</h1>
+    <hr>
     <p class="lead">Es una aplicacion desarrollada para la seguridad cotidiana.</p>
+    <p class="lead"> Bienvenido al sistema de monitoreo.</p>
     <agm-map [latitude]="getLati()" [longitude]="getLong()" [zoom]="16" [scrollwheel]="false" [mapDraggable]="false">
         <agm-marker [latitude]="getLati()" [longitude]="getLong()">
             <agm-info-window>
