--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" [routerLink]="['home']" >Inicio</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['heroes']">Registros</a>
+        <a class="nav-link" [routerLink]="['heroes']"><img src="/assets/info.png" width="30" height="30">Registros</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['about']">About</a>
