--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,6 +4,9 @@
 <p class="animated fadeIn"> Roberto Lobos</p>
 <p class="animated fadeIn"> Felipe Hernández</p>
 <hr>
+<p class="animated fadeIn"> Taller de integracion III</p>
+<hr>
 <p class="animated fadeIn"> Profesor guia: Julio Rojas Mora</p>
 <hr>
 <p class="animated fadeIn"> Universidad Catolica de Temuco</p>
+
